applications/ldap/ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ldap-system

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpldapadmin
  namespace: ldap-system
  labels:
    app: phpldapadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpldapadmin
  template:
    metadata:
      labels:
        app: phpldapadmin
    spec:
      containers:
      - name: phpldapadmin
        image: osixia/phpldapadmin:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: phpldapadmin-service
  namespace: ldap-system
spec:
  selector:
    app: phpldapadmin
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ldap-admin-ingress
  namespace: ldap-system
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    external-dns.alpha.kubernetes.io/hostname: ldap.kevindev.com.br
    external-dns.alpha.kubernetes.io/ttl: "300"
    nginx.ingress.kubernetes.io/proxy-set-headers: "ldap-system/ldap-admin-headers"
    nginx.ingress.kubernetes.io/client-max-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - ldap.kevindev.com.br
    secretName: ldap-admin-tls
  rules:
  - host: ldap.kevindev.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: phpldapadmin-service
            port:
              number: 80
